updated my work

--- a/Thank-you.html
+++ b/Thank-you.html
@@ -6,7 +6,7 @@
     <title>Thank You</title>
 </head>
 <body>
-    <h1>We have received you response!</h1>
+    <h1>We have received your response!</h1>
     <p><b>Thank you for your feedback. An email containing more Information will be sent to you in 14 days time. <br> Stay Techy!</b></p>
 </body>
 </html>
