--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <form action="https://formsubmit.co/cgsomto@gmail.com" method="POST" enctype="multipart/form-data" target="_blank">
         <input type="hidden" name="_captcha" value="true">
-        <input type="hidden" name="_next" value="https://github.com/Lethal-Somto/Hale-Application-Form/blob/main/Thank%20you.html">
+        <input type="hidden" name="_next" value="https://github.com/Lethal-Somto/Hale-Application-Form/Thank-you.html">
         <h1>Hale's Monthly Intensive Training Programme</h1>
         <P>This is a monthly program designed to take young, vulnerable minds on a journey to mastery.<br>At Hale's we
             don't
